prometheus/v-3-5-0/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitor-ns
  labels:
    app: grafana
spec:
  ingressClassName: 'nginx'
  rules:
  - host: grafana.shixiaochuang.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
