prometheus/v-3-5-0/grafana-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitor-ns
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.shixiaochuang.net`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
