prometheus/v-3-5-0/prometheus-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: prometheus-ns
  labels:
    app: prometheus
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheusui.shixiaochuang.org`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
